# assignment3.8_2b

./: CMakeLists.txt  badparams.cpp  badparams.h  base.cpp  base.h  equilateral.cpp  equilateral.h  isosceles.cpp  isosceles.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
